--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.15",
     "@lottiefiles/react-lottie-player": "^3.5.3",
+    "@react-pdf/renderer": "^3.1.12",
     "axios": "^1.4.0",
     "firebase": "^10.1.0",
     "keen-slider": "^6.8.6",
@@ -23,6 +25,8 @@
     "react-hook-form": "^7.45.2",
     "react-icon": "^1.0.0",
     "react-icons": "^4.10.1",
+    "react-id-swiper": "^4.0.0",
+    "react-pdf": "^7.2.0",
     "react-query": "^3.39.3",
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^6.14.2",
